--- a/css/project.css
+++ b/css/project.css
@@ -316,7 +316,7 @@
   display: inline-block;
   position: relative;
   color: #fff; 
-  margin-left: -20px;
+  gap: 20px;
   box-shadow: 14px 0px 103px rgba(0, 0, 0, 0.096);
 }
 
@@ -1636,7 +1636,7 @@ font-size: 36px;
 .modal-right {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 999999;
   left: 0;
   top: 0;
   width: 100%;
@@ -1652,6 +1652,10 @@ font-size: 36px;
   border: 1px solid #888;
   width: 30%;
   top: 5%;
+}
+
+.modal-right .modal-content p{
+  font-weight: 500;
 }
 
 
