--- a/css/style.css
+++ b/css/style.css
@@ -9941,11 +9941,11 @@ a {
 
 .site-footer {
   height: 100vh;
-  padding-top: 25vh;
+  padding-top: 15vh;
   padding-bottom: 100px;
   margin-bottom:-100px;
   font-size: 14px;
-  background: linear-gradient(to bottom right, rgba(6, 39, 78), rgba(18, 67, 126));
+  background: url(../images/footer-bg.png) ;
   background-size: cover;
   color: #fff; }
 
